# CatEngine-Linux

./: .gitignore  .gitmodules  BandR.sh  Build.sh  BuildR.sh  README.md  build.sh  buildandrun.sh  premake5.lua
Application/: Application.cpp
Application/src/: CatEngine.h
Application/src/CatEngine/: App.cpp  App.h  Application.cpp
Application/src/CatEngine/core/: EntryPoint.h  Log.cpp  Log.h
CatEngine/: CMakeLists.txt  CatEngineProj.sh
CatEngine/src/: CatEngine.h  cepch.h
CatEngine/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  SandboxProj.sh
Sandbox/src/: SandboxApp.cpp
